# TAG-MoE

./: README.md  infer.py  pyproject.toml  run_gradio.py
src/: infer_tagmoe.py
src/models/: transformer_qwenimage_tagmoe.py
src/pipelines/: pipeline_qwenimage_tagmoe.py
src/utils/: __init__.py  device_utils.py  inference_config.py
